[project]
name = "llmart"
version = "2025.03"
description = "LLMart"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.11"

dependencies = []

[project.optional-dependencies]
core = [
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "accelerate==1.5.2",
    "torch==2.6.0",
    "transformers[sentencepiece]==4.48.0",
    "tensorboard==2.18.0",
    "datasets==3.1.0",
]

dev = [
    "pre-commit==4.1.0",
    "basedpyright==1.28.1",
    "pytest==8.3.2",
    "ruff==0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
deprecateTypingAliases = true
reportDeprecated = true
