[project]
name = "llmart"
version = "2026.01.1"
description = "LLMart"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.11.0"

dependencies = []

[project.optional-dependencies]
core = [
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "accelerate==1.6.0",
    "transformers[sentencepiece,torch-vision]==4.53.0",
    "tensorboard==2.18.0",
    "datasets==3.1.0",
]

gpu = [
    "torch==2.8.0",
    "llmart[core]",
]

xpu = [
    "torch==2.8.0+xpu",
    "pytorch-triton-xpu==3.4.0",
    "llmart[core]",
]

dev = [
    "pre-commit==4.1.0",
    "basedpyright==1.28.1",
    "pytest==8.3.2",
    "ruff==0.11.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
deprecateTypingAliases = true
reportDeprecated = true
reportPrivateImportUsage = false

[tool.uv]
conflicts = [
  [
    { extra = "gpu" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra = "xpu" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
